@@ -1,3 +1,7 @@
+2006-11-21  Nurdin Premji  <npremji@redhat.com>
+
+	* hpd/CLI.java: Changed to use FindProc interface.
+
 2006-11-17  Stan Cox  <scox@redhat.com>
 
 	* hpd/CLI.java (CLIEventLoop): New.
